@@ -1,1 +1,23 @@
 # login_page_with_database
+---
+## Login Sample Screenshots
+![Login Sample]()
+---
+## Signup Sample Screenshots
+![signup Sample]()
+---
+## Welcome Sample Screenshots
+![Welcome Sample]()
+---
+
+## Requirements👇👇👇
+  * jdk-17
+  * javafx-sdk-18.0.1
+  * mysql-connector-java-8.0.29
+---
+## vmArgs setup
+
+```vmArgs
+--module-path /path/javafx-sdk-18/lib --add-modules javafx.controls,javafx.fxml
+```
+
